Decommission the old cache.